--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,37 @@
+/*@import "animation.css";*/
+
+@font-face {
+    font-family: "FunSized";
+    src: url("../fonts/FunSized/FunSized.eot");
+    /* IE9 Compat Modes */
+    src: url("../fonts/FunSized/FunSized.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("../fonts/FunSized/FunSized.otf") format("opentype"), /* Open Type Font */
+    url("../fonts/FunSized/FunSized.ttf") format("truetype"), /* Safari, Android, iOS */
+    url("../fonts/FunSized/FunSized.woff") format("woff"), /* Modern Browsers */
+    url("../fonts/FunSized/FunSized.woff2") format("woff2");
+    /* Modern Browsers */
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+/* font converted using font-converter.net. thank you! */
+
+@font-face {
+    font-family: "TheMacabre";
+    src: url("../fonts/TheMacabre/TheMacabre.eot");
+    /* IE9 Compat Modes */
+    src: url("../fonts/TheMacabre/TheMacabre.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("../fonts/TheMacabre/TheMacabre.otf") format("opentype"), /* Open Type Font */
+    url("../fonts/TheMacabre/TheMacabre.svg") format("svg"), /* Legacy iOS */
+    url("../fonts/TheMacabre/TheMacabre.ttf") format("truetype"), /* Safari, Android, iOS */
+    url("../fonts/TheMacabre/TheMacabre.woff") format("woff"), /* Modern Browsers */
+    url("../fonts/TheMacabre/TheMacabre.woff2") format("woff2");
+    /* Modern Browsers */
+    font-weight: normal;
+    font-style: normal;
+}
+
 header.masthead {
     background-image: url('../img/space.gif');
 }
@@ -5,4 +39,28 @@ header.masthead {
 #slogan {
     width: 100%;
     float: left;
+}
+
+strong {
+    font-size: 5rem;
+}
+
+h1.text-uppercase {
+    font-family: 'FunSized';
+    font-size: 30px;
+}
+
+@media screen and (min-width: 700px) {
+    nav {
+        max-height: 6rem;
+    }
+}
+hr{
+    color: rgb(121, 93, 196);
+}
+a.btn{
+    background-color: rgb(121, 93, 196);
+}
+.btn-primary{
+    background-color: rgb(97, 70, 172);
 }
