--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/*@import "animation.css";*/
+@import "animation.css";
 
 @font-face {
     font-family: "FunSized";
@@ -37,7 +37,7 @@ header.masthead {
 }
 
 #slogan {
-    width: 100%;
+    height: 5rem;
     float: left;
 }
 
@@ -56,11 +56,17 @@ h1.text-uppercase {
     }
 }
 hr{
-    color: rgb(121, 93, 196);
+    border-color: rgb(121, 93, 196);
 }
 a.btn{
     background-color: rgb(121, 93, 196);
+    color: rgb(37, 37, 37);
 }
-.btn-primary{
-    background-color: rgb(97, 70, 172);
+a.btn:hover{
+    background-color: rgb(57, 41, 100);
+    color: rgb(201, 201, 201);
+}
+
+.bg-primary{
+    background-color: #102e4a!important;
 }
