--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,13 @@
 
 @font-face {
     font-family: "FunSized";
-    src: url("../fonts/FunSized/FunSized.eot");
+    src: url("/fonts/FunSized/FunSized.eot");
     /* IE9 Compat Modes */
-    src: url("../fonts/FunSized/FunSized.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("../fonts/FunSized/FunSized.otf") format("opentype"), /* Open Type Font */
-    url("../fonts/FunSized/FunSized.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("../fonts/FunSized/FunSized.woff") format("woff"), /* Modern Browsers */
-    url("../fonts/FunSized/FunSized.woff2") format("woff2");
+    src: url("/fonts/FunSized/FunSized.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("/fonts/FunSized/FunSized.otf") format("opentype"), /* Open Type Font */
+    url("/fonts/FunSized/FunSized.ttf") format("truetype"), /* Safari, Android, iOS */
+    url("/fonts/FunSized/FunSized.woff") format("woff"), /* Modern Browsers */
+    url("/fonts/FunSized/FunSized.woff2") format("woff2");
     /* Modern Browsers */
     font-weight: normal;
     font-style: normal;
@@ -19,21 +19,21 @@
 
 @font-face {
     font-family: "TheMacabre";
-    src: url("../fonts/TheMacabre/TheMacabre.eot");
+    src: url("/fonts/TheMacabre/TheMacabre.eot");
     /* IE9 Compat Modes */
-    src: url("../fonts/TheMacabre/TheMacabre.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("../fonts/TheMacabre/TheMacabre.otf") format("opentype"), /* Open Type Font */
-    url("../fonts/TheMacabre/TheMacabre.svg") format("svg"), /* Legacy iOS */
-    url("../fonts/TheMacabre/TheMacabre.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("../fonts/TheMacabre/TheMacabre.woff") format("woff"), /* Modern Browsers */
-    url("../fonts/TheMacabre/TheMacabre.woff2") format("woff2");
+    src: url("/fonts/TheMacabre/TheMacabre.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("/fonts/TheMacabre/TheMacabre.otf") format("opentype"), /* Open Type Font */
+    url("/fonts/TheMacabre/TheMacabre.svg") format("svg"), /* Legacy iOS */
+    url("/fonts/TheMacabre/TheMacabre.ttf") format("truetype"), /* Safari, Android, iOS */
+    url("/fonts/TheMacabre/TheMacabre.woff") format("woff"), /* Modern Browsers */
+    url("/fonts/TheMacabre/TheMacabre.woff2") format("woff2");
     /* Modern Browsers */
     font-weight: normal;
     font-style: normal;
 }
 
 header.masthead {
-    background-image: url('../img/space.gif');
+    background-image: url('/img/space.gif');
 }
 
 #slogan {
