--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,6 +32,17 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Brendohand';
+    src: url('/fonts/BrendoHand/Brendohand-Regular.eot');
+    src: url('/fonts/BrendoHand/Brendohand-Regular.eot?#iefix') format('embedded-opentype'),
+        url('/fonts/BrendoHand/Brendohand-Regular.woff2') format('woff2'),
+        url('/fonts/BrendoHand/Brendohand-Regular.woff') format('woff'),
+        url('/fonts/BrendoHand/Brendohand-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 header.masthead {
     background-image: url('/img/space.gif');
 }
@@ -58,15 +69,22 @@ h1.text-uppercase {
 hr{
     border-color: rgb(121, 93, 196);
 }
-a.btn{
-    background-color: rgb(121, 93, 196);
-    color: rgb(37, 37, 37);
-}
 a.btn:hover{
-    background-color: rgb(57, 41, 100);
-    color: rgb(201, 201, 201);
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+}
+a.btn{
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 
 .bg-primary{
-    background-color: #102e4a!important;
+    background-color: rgb(94, 68, 165)!important;
+}
+
+h2.text-white{
+    font-weight: bolder;
+    font-family: 'Brendohand';
+    font-size: 2.8rem;
+    color: #ffffff;
 }
