--- a/static/css/AudioPlayer.css
+++ b/static/css/AudioPlayer.css
@@ -20,11 +20,11 @@ body {
 
 #main {
     width: 10rem;
-    height: 7.5rem;
+    height: 11.5rem;
     background-color: rgb(80, 80, 80);
     border-radius: 15px;
     position: relative;
-    top: 5rem;
+    top: 6.5rem;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 999;
@@ -98,3 +98,44 @@ body {
     margin-left: -5px;
     transform: scale(2);
 }
+
+/*slider de audio*/
+
+.slidecontainer {
+    width: 100%;
+  }
+  
+  .slider {
+    -webkit-appearance: none;
+    margin-left: 5%;
+    width: 90%;
+    height: 15px;
+    border-radius: 15px;
+    background: #aaaaaa;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+  .slider:hover {
+    opacity: 1;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: rgb(255, 197, 255);
+    cursor: pointer;
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+  }
