--- a/static/about/CSS/about.css
+++ b/static/about/CSS/about.css
@@ -88,96 +88,6 @@ h2.text-white{
     font-size: 2.8rem;
     color: #ffffff;
 }
-@import "animation.css";
-
-@font-face {
-    font-family: "FunSized";
-    src: url("/fonts/FunSized/FunSized.eot");
-    /* IE9 Compat Modes */
-    src: url("/fonts/FunSized/FunSized.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("/fonts/FunSized/FunSized.otf") format("opentype"), /* Open Type Font */
-    url("/fonts/FunSized/FunSized.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("/fonts/FunSized/FunSized.woff") format("woff"), /* Modern Browsers */
-    url("/fonts/FunSized/FunSized.woff2") format("woff2");
-    /* Modern Browsers */
-    font-weight: normal;
-    font-style: normal;
-}
-
-
-/* font converted using font-converter.net. thank you! */
-
-@font-face {
-    font-family: "TheMacabre";
-    src: url("/fonts/TheMacabre/TheMacabre.eot");
-    /* IE9 Compat Modes */
-    src: url("/fonts/TheMacabre/TheMacabre.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("/fonts/TheMacabre/TheMacabre.otf") format("opentype"), /* Open Type Font */
-    url("/fonts/TheMacabre/TheMacabre.svg") format("svg"), /* Legacy iOS */
-    url("/fonts/TheMacabre/TheMacabre.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("/fonts/TheMacabre/TheMacabre.woff") format("woff"), /* Modern Browsers */
-    url("/fonts/TheMacabre/TheMacabre.woff2") format("woff2");
-    /* Modern Browsers */
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Brendohand';
-    src: url('/fonts/BrendoHand/Brendohand-Regular.eot');
-    src: url('/fonts/BrendoHand/Brendohand-Regular.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/BrendoHand/Brendohand-Regular.woff2') format('woff2'),
-        url('/fonts/BrendoHand/Brendohand-Regular.woff') format('woff'),
-        url('/fonts/BrendoHand/Brendohand-Regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-header.masthead {
-    background-image: url('/img/space.gif');
-}
-
-#slogan {
-    height: 5rem;
-    float: left;
-}
-
-strong {
-    font-size: 5rem;
-}
-
-h1.text-uppercase {
-    font-family: 'FunSized';
-    font-size: 30px;
-}
-
-@media screen and (min-width: 700px) {
-    nav {
-        max-height: 6rem;
-    }
-}
-hr{
-    border-color: rgb(121, 93, 196);
-}
-a.btn:hover{
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
-}
-a.btn{
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-}
-
-.bg-primary{
-    background-color: rgb(94, 68, 165)!important;
-}
-
-h2.text-white{
-    font-weight: bolder;
-    font-family: 'Brendohand';
-    font-size: 2.8rem;
-    color: #ffffff;
-}
 
 /*==================== 
 	Footer 
@@ -210,7 +120,7 @@ footer.light .main-footer{	background: #f9f9f9;}
 footer.light .footer-copyright{	background: none repeat scroll 0 0 rgba(255, 255, 255, 0.3) ;}
 
 /* Footer 4 */
-.footer- .logo {    display: inline-block;}
+.footer- .logo {    display: inline-block}
 
 /*==================== 
 	Widgets 
@@ -255,25 +165,13 @@ box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
 -ms-transition: all 250ms ease-in-out 0s;
 -o-transition: all 250ms ease-in-out 0s;
 transition: all 250ms ease-in-out 0s;
-
 }
 
-
-.social-link {
-    width: 30px;
-    height: 30px;
-    border: 1px solid #ddd;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #666;
-    border-radius: 50%;
-    transition: all 0.3s;
-    font-size: 0.9rem;
+img.rounded-circle{
+    height: 9rem;
 }
 
-.social-link:hover, .social-link:focus {
-    background: #ddd;
-    text-decoration: none;
-    color: #555;
+div.row{
+    text-align:center;
+    justify-items: center;
 }
