--- a/static/css/style.css
+++ b/static/css/style.css
@@ -120,7 +120,7 @@ footer.light .main-footer{	background: #f9f9f9;}
 footer.light .footer-copyright{	background: none repeat scroll 0 0 rgba(255, 255, 255, 0.3) ;}
 
 /* Footer 4 */
-.footer- .logo {    display: inline-block;}
+.footer- .logo {    display: inline-block}
 
 /*==================== 
 	Widgets 
