--- a/static/about/CSS/about.css
+++ b/static/about/CSS/about.css
@@ -93,108 +93,34 @@ h2.text-white {
 	Footer 
 ====================== */
 
-
 /* Main Footer */
-
-footer .main-footer {
-    padding: 20px 0;
-    background: #252525;
-}
-
-footer ul {
-    padding-left: 0;
-    list-style: none;
-}
-
+footer .main-footer{	padding: 20px 0;	background: #252525;}
+footer ul{	padding-left: 0;	list-style: none;}
 
 /* Copy Right Footer */
-
-.footer-copyright {
-    background: #222;
-    padding: 5px 0;
-}
-
-.footer-copyright .logo {
-    display: inherit;
-}
-
-.footer-copyright nav {
-    float: right;
-    margin-top: 5px;
-}
-
-.footer-copyright nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.footer-copyright nav ul li {
-    border-left: 1px solid #505050;
-    display: inline-block;
-    line-height: 12px;
-    margin: 0;
-    padding: 0 8px;
-}
-
-.footer-copyright nav ul li a {
-    color: #969696;
-}
-
-.footer-copyright nav ul li:first-child {
-    border: medium none;
-    padding-left: 0;
-}
-
-.footer-copyright p {
-    color: #969696;
-    margin: 2px 0 0;
-}
-
+.footer-copyright {	background: #222;	padding: 5px 0;}
+.footer-copyright .logo {    display: inherit;}
+.footer-copyright nav {    float: right;    margin-top: 5px;}
+.footer-copyright nav ul {	list-style: none;	margin: 0;	padding: 0;}
+.footer-copyright nav ul li {	border-left: 1px solid #505050;	display: inline-block;	line-height: 12px;	margin: 0;	padding: 0 8px;}
+.footer-copyright nav ul li a{	color: #969696;}
+.footer-copyright nav ul li:first-child {	border: medium none;	padding-left: 0;}
+.footer-copyright p {	color: #969696;	margin: 2px 0 0;}
 
 /* Footer Top */
-
-.footer-top {
-    background: #252525;
-    padding-bottom: 30px;
-    margin-bottom: 30px;
-    border-bottom: 3px solid #222;
-}
-
+.footer-top{	background: #252525;	padding-bottom: 30px;	margin-bottom: 30px;	border-bottom: 3px solid #222;}
 
 /* Footer transparent */
-
-footer.transparent .footer-top,
-footer.transparent .main-footer {
-    background: transparent;
-}
-
-footer.transparent .footer-copyright {
-    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.3);
-}
-
+footer.transparent .footer-top, footer.transparent .main-footer{	background: transparent;}
+footer.transparent .footer-copyright{	background: none repeat scroll 0 0 rgba(0, 0, 0, 0.3) ;}
 
 /* Footer light */
-
-footer.light .footer-top {
-    background: #f9f9f9;
-}
-
-footer.light .main-footer {
-    background: #f9f9f9;
-}
-
-footer.light .footer-copyright {
-    background: none repeat scroll 0 0 rgba(255, 255, 255, 0.3);
-}
-
+footer.light .footer-top{	background: #f9f9f9;}
+footer.light .main-footer{	background: #f9f9f9;}
+footer.light .footer-copyright{	background: none repeat scroll 0 0 rgba(255, 255, 255, 0.3) ;}
 
 /* Footer 4 */
-
-.footer- .logo {
-    display: inline-block
-}
-
+.footer- .logo {    display: inline-block}
 
 /*==================== 
 	Widgets 
@@ -336,12 +262,20 @@ div.row {
 
 /*/////////////////////////////*/
 
+
 #team {
     width: 98%;
-    top: 0px;
+    top: 8rem;
     bottom: 0px;
     margin-left: 1rem;
     margin-right: 1rem;
+    height: 7.2rem;
+}
+
+#hr {
+    width: 100%;
+    height: 10px;
+    background-color: #ff0000;
 }
 
 #team .profile {
@@ -362,10 +296,7 @@ div.row {
     margin-right: 1.5rem;
     height: auto;
 }
-#footer{
-    height: 1px;
-    width: 100%;
-}
+
 @media only screen and (max-device-width: 770px) {
     #team .profile {
         float: none;
@@ -378,5 +309,6 @@ div.row {
         bottom: 0px;
         margin-left: 1rem;
         margin-right: 1rem;
+        height: auto;
     }
 }
