--- a/static/about/CSS/about.css
+++ b/static/about/CSS/about.css
@@ -39,6 +39,11 @@
     font-style: normal;
 }
 
+body{
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
 header.masthead {
     background-image: url('/img/space.gif');
 }
