--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,7 +44,7 @@
 }
 
 header.masthead {
-    background-image: url('/img/space.gif');
+    background-image: url('/img/space_otimized.gif');
 }
 
 #slogan {
