--- a/static/css/animation.css
+++ b/static/css/animation.css
@@ -1,3 +1,11 @@
+.navbar-shrink {
+    animation: navbar-abaixada 2s forwards!important;
+    background-color: rgba(142, 15, 242, 1.0)!important;
+}
+.navbar-shrink img {
+    animation: imagem-menor 2s forwards!important;
+}
+
 .navbar {
     animation: navbar-topo 2s forwards;
 }
