--- a/static/css/style.css
+++ b/static/css/style.css
@@ -189,8 +189,9 @@ p.joke{
     text-shadow: 1px 1px rgb(0, 0, 0);
     font-weight: bolder;
     text-align: center;
-    background-color: rgba(121, 93, 196,0.8);
-    
+}
+div.navbar-collapse.collapse.show{
+    border-bottom: 5px solid rgba(121, 93, 196,1);
 }
 
 /*MOBILE SCREEN*/
@@ -217,5 +218,10 @@ p.joke{
     }
     h1.text-uppercase{
         font-size: 2rem !important;
+    }
+
+    #mainNav .navbar-nav > li.nav-item > a.nav-link, #mainNav .navbar-nav > li.nav-item > a.nav-link:focus{
+        border-top: 5px solid rgba(121, 93, 196,0.8);
+        background-color: rgba(121, 93, 196,0.8);
     }
 }
