--- a/static/about/CSS/about.css
+++ b/static/about/CSS/about.css
@@ -390,11 +390,30 @@ div.navbar-collapse.collapse.show{
   ============================*/
 div#white-div{
     --largura: 90%;
+    --cor: #d3d3d3;
+    --cor-borda: #b4b4b4;
+    --borda: 1rem;
     width: var(--largura);
     height: auto;
     margin-right: calc((100% - var(--largura))/2);
     margin-left: calc((100% - var(--largura))/2);
-    background-color: #ffffff;
+    background-color: var(--cor);
+    border: var(--borda) solid var(--cor-borda);
+}
+div#white-div h1{
+    color: black;
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+div#white-div p{
+    --borda: 5%;
+    color: black;
+    font-size: 1rem;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: justify;
+    margin-left: calc(var(--borda)/2);
+    margin-right: calc(var(--borda)/2);
 }
 
 /*============================
