--- a/static/about/CSS/about.css
+++ b/static/about/CSS/about.css
@@ -415,21 +415,23 @@ div#white-div p{
     margin-left: calc(var(--borda)/2);
     margin-right: calc(var(--borda)/2);
 }
-div#white-div div#text{
-    width: 12rem;
+div#white-div div#texto{
+    width: 80%;
+}
+div#white-div div.profile{
+    width: 20%;
 }
 div#white-div #hide:hover{
     opacity: 0;
 }
 div#white-div div.profile img{
-    position: absolute;
-    right: calc(var(--borda)*7);
+    right: 0;
     transition: 1s;
-    width: 20%;
-    top: 16rem;
+    width: 100%;
+    top: 0rem;
 }
-div#white-div div.profile{
-    text-align: right;
+div#white-div div.profile img#hide{
+    margin-top: -100%;
 }
 
 /*============================
