--- a/static/about/CSS/about.css
+++ b/static/about/CSS/about.css
@@ -417,6 +417,9 @@ div#white-div p{
 }
 div#white-div div#texto{
     width: 80%;
+    padding-top: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 div#white-div div.profile{
     width: 20%;
@@ -430,7 +433,33 @@ div#white-div div.profile img{
     width: 100%;
     top: 0rem;
 }
+/*USO PARA PERFIL DO WANGHLEY*/
+div#white-div div.profile img.wanghley{
+    right: 0;
+    transition: 1s;
+    /*width: 100%;*/
+    top: 0rem;
+}
+div#white-div div.profile img.wanghley-original{
+    right: 0;
+    transition: 1s;
+    width: 100%;
+    height: 101.9%;
+    top: 0rem;
+}
 
+@media only screen and (max-device-width: 770px) {
+    div#white-div div.profile{
+        width: 100%;
+        top: 0;
+        position: relative;
+    }
+    div#white-div div#texto{
+        padding-top: 30px;
+        position: relative;
+        width: 100%;
+    }
+}
 /*============================
          Social Medias
   ============================*/
