--- a/static/about/CSS/about.css
+++ b/static/about/CSS/about.css
@@ -317,7 +317,7 @@ div.row {
     font-size: 1.7rem;
 }
 h2.founders-title{
-    color: rgb(94, 68, 165);
+    color: rgb(157, 130, 231);
     font-weight: bolder;
     font-family: 'Brendohand';
     font-size: 3rem;
@@ -424,13 +424,17 @@ div#white-div p{
     margin-right: calc(var(--borda)/2);
 }
 div#white-div div#texto{
-    width: 80%;
+    width: 75%;
     padding-top: 30px;
     padding-left: 30px;
     padding-right: 30px;
 }
 div#white-div div.profile{
     width: 20%;
+    margin-top: auto;
+    margin-bottom: auto;
+    align-items: center;
+    margin-left: 2rem;
 }
 div#white-div #hide:hover{
     opacity: 0;
@@ -439,22 +443,36 @@ div#white-div div.profile img{
     right: 0;
     transition: 1s;
     width: 100%;
-    top: 0rem;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 /*USO PARA PERFIL DO WANGHLEY*/
 div#white-div div.profile img.wanghley{
-    right: 0;
     transition: 1s;
-    /*width: 100%;*/
-    top: 0rem;
+    width: 100%;
 }
 div#white-div div.profile img.wanghley-original{
     right: 0;
     transition: 1s;
     width: 100%;
-    height: 101.9%;
+    height: 100.9%;
     top: 0rem;
 }
+div.redes-sociais-wanghley{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1rem;
+}
+
+div.redes-sociais-wanghley a{
+    margin: 0 1rem;
+    background-color: rgb(94, 68, 165);
+}
+div.redes-sociais-wanghley a i{
+    color: #fff;
+}
+
 /********************************/
 
 @media only screen and (max-device-width: 770px) {
