--- a/static/about/CSS/about.css
+++ b/static/about/CSS/about.css
@@ -435,7 +435,7 @@ div#white-div div.profile{
     margin-top: auto;
     margin-bottom: auto;
     align-items: center;
-    margin-left: 2rem;
+    margin: 2rem 0rem 2rem 2rem;
 }
 div#white-div #hide:hover{
     opacity: 0;
