--- a/static/services/css/style.css
+++ b/static/services/css/style.css
@@ -33,5 +33,50 @@
 }
 
 #wearefoda {
-  height: 1000px;
+  height: 3000px;
 }
+
+#wearefoda .card-port {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  transition: all 500ms;
+}
+
+#wearefoda .card-port:hover {
+  box-shadow: rgba(2, 8, 20, 0.1) 0px 0.35em 1.175em, rgba(2, 8, 20, 0.08) 0px 0.175em 0.5em;
+  transform: translateY(-3px) scale(1.1);
+}
+
+#wearefoda .card-deck {
+  padding: 10px 8%;
+}
+
+.cartao-body {
+  height: 20rem;
+}
+
+.gol {
+  height: 55px;
+  border-radius: 20px;
+  background-color: yellow;
+}
+
+.card-deck .card-img {
+  padding: 10px;
+}
+
+#wearefoda .card-deck .rocket{
+  padding: 10px;
+  padding-top: 40px;
+}
+
+#wearefoda .card-deck .statusDev {
+  padding-left: 20px;
+  height: 1.5rem;
+  padding-top: 3%;
+  text-align: left;
+  font-family: sans-serif;
+  font-weight: 1000;
+}
+
