--- a/static/services/css/style.css
+++ b/static/services/css/style.css
@@ -6,7 +6,9 @@
 .masthead .card {
     border-radius: 20px;
     transition: all 500ms;
-    border-color: rgba(175, 97, 203, 1);;
+    box-shadow: 2px 2px 2px indigo;
+    border-spacing: 10px;
+    border-color: indigo;
 }
 
 .masthead .card:hover {    
@@ -20,7 +22,6 @@
 }
 
 .masthead .card-body {   
-    background-color: rgba(175, 97, 203, 1);
     border-radius: 0px 0px 20px 20px;
 }
 
@@ -37,11 +38,8 @@ body {
   height: 100%;
 }
 
-#wearefoda {
-  
-}
-
 #wearefoda .card {
+  box-shadow: 3px 3px 3px rgba(54, 54, 54, 1);;
   width: 100%;
   height: 100%;
   border-radius: 20px;
