[UPDATE] - Atualizando elementos basicos para modal do candidate-se na Home

--- a/static/css/register.css
+++ b/static/css/register.css
@@ -1,3 +1,9 @@
-.modal-header {
-    background-color: red;
+.register .btn{
+    color: black;
+    background-color: white;
+}
+
+.register .btn:hover {
+    color: white;
+    background-color: black;
 }
