[UPDATE] - Estilizando form de candidate-se e introduzindo validação de email do lado do cliente como teste

--- a/static/css/register.css
+++ b/static/css/register.css
@@ -1,9 +1,95 @@
-.register .btn{
+#register .btn{
     color: black;
     background-color: white;
 }
 
-.register .btn:hover {
+#register .btn:hover {
     color: white;
     background-color: black;
+}
+
+#register .modal-content {
+    width: 667px;
+    height: 353px;
+    border-radius: 20px;
+}
+
+#register .modal-body {
+    width: 667px;
+    height: 353px;
+    background-image: url('/img/imf.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    color: white;
+    border-radius: 20px;
+}
+
+#register .modal-body .modal-title {
+    color: white;
+}
+
+#register .title{
+    color: white;
+    transition: all 200ms;
+}
+#register .input-form{
+    border: 1px solid black;
+    color: white;
+    transition: all 200ms;
+    border-radius: 20px;
+}
+
+.needs-validation {
+    width: 100%;
+    padding-left: 198px;  
+}
+
+#register #email {
+    width: 250px;
+    background-color: rgba(77, 77, 77, 0.582);
+    transition: all 500ms;
+}
+
+
+#register #email:hover {
+    background-color: rgba(54, 49, 49, 0.1);
+    transition: all 500ms;
+}
+
+#register .input-form:hover{
+    background-color: rgba(26, 24, 24, 0);
+    border: 1px solid white;
+}
+#register .input-form:focus{
+    color: white;
+}
+#register .input-form::placeholder {
+    opacity: 1;
+    font-family: sans-serif;
+    color: black;
+    transition: all 200ms;
+    font-size: 15pt;
+    padding-left: 5px;
+}
+
+#register .input-form:hover::placeholder {
+    padding-left: 95px;
+}
+
+#register input:invalid {
+    border-color: crimson;
+    box-shadow: 0px 0px 0px crimson;
+}
+
+#register input:focus {
+    outline: none;
+}
+
+#register input:focus:invalid {
+    box-shadow: none;
+}
+
+#register span {
+    color: crimson;
 }
