--- a/static/css/register.css
+++ b/static/css/register.css
@@ -12,14 +12,14 @@
 
 /*===========================================MODAL=======================================================*/
 #register .modal-content {
-    width: 667px;
-    height: 353px;
+    width: 120%;
+    height: 25rem;
     border-radius: 20px;
 }
 
 #register .modal-body {
-    width: 667px;
-    height: 353px;
+    width: 120%;
+    height: 25rem;
     background-image: url('/img/imf.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -41,11 +41,12 @@
 /*===========================================FORM=======================================================*/
 
 #register .ola {
+    height: 100px;
     padding-right: 400px;
     border-radius: 20px;
 }
 
-#register  .imput-1 .input-form{
+#register .input-form{
     border: 1px solid black;
     color: white;
     border-radius: 20px;
@@ -93,7 +94,7 @@
     padding-left: 80px;
     color: rgba(0, 0, 0, 0.2);
 }
-
+/*==================ESTILIZAÇÃO DE VAÇÃOLIDA================================*/
 #register input:invalid {
     box-shadow: 0px 0px 0px crimson;
 }
@@ -107,6 +108,7 @@
 }
 
 #register span {
+    transition: all 300ms;
     color: crimson;
 }
 
